<resources>
    <string name="app_name">RunnerApp</string>

    <string name="login_button_underlined"><u>Войти</u></string>
    <string name="registration"><u>Зарегистрироваться</u></string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_email">Введите email</string>
    <string name="hint_confirm_password">Повторите пароль</string>
    <string name="hint_last_name">Введите фамилию</string>
    <string name="hint_first_name">Введите имя</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_empty_field">Заполните пустое поле</string>
    <string name="back_pressed_running_screen_toast">"Пробежка не завершена, нажмите \"Финиш\""</string>
    <string name="notifications">Напоминания</string>
    <string name="logout">Выход</string>
    <string name="request_permission">Доступ к местоположению необходим для записи маршрута и отображения на карте. Перейдите в экран настроек для предоставления доступа к местополжению</string>
    <string name="running_time">Время пробежки</string>
    <string name="ann_new_track">Новый трек</string>
    <string name="start_date">Дата старта</string>
    <string name="track_distance">Дистанция (км)</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="notification_delete">Напоминание удалено</string>
    <string name="ok">OK</string>
    <string name="set_notification">Напоминание установлено на:</string>
    <string name="notification">Напоминание</string>
    <string name="message_start_run">Пора на пробежку!</string>
    <string name="add_notification">Добавить напоминание</string>
    <string name="delete_notification">Удалить напоминание</string>
    <string name="open_settings">Настройки</string>
    <string name="location_permission">Необходимо включить определение местоположения</string>
    <string name="location_on">Включить</string>
    <string name="main_screen">Главный экран</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="fill_empty_field">Заполните пустое поле</string>
    <string name="time_change_notification">Время напоминания изменено на:</string>
    <string name="error_saving_track">Трек не будет сохранен, так как маршрут отсутсвует</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="title_app">RunnerApp</string>
    <string name="background_notification">Приложение работает в фоновом режиме</string>
    <string name="error_internet_connection">Интернет соединение отсутствует</string>
    <string name="error_synchronization">Ошибка синхронизации</string>
    <string name="track">Трек</string>
    <string name="result">Результаты пробежки</string>
    <string name="length_error">Минимальная длина 6 символов</string>
    <string name="new_running">Новая пробежка</string>
    <string name="uncorrect_email">Введен некорректный email</string>
</resources>